<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="10dip">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<ImageView
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:id="@+id/aheadPhoto"
			android:layout_gravity="center"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20dp"
			android:text="@string/registerresult_activity_nickName"/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="15dp"
			android:id="@+id/anickName"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20dp"
			android:text="@string/registerresult_activity_emailAddress"/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="15dp"
			android:id="@+id/aemailAddress"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textSize="20dp"
			android:text="@string/registerresult_activity_phoneNum"/>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="15dp"
			android:id="@+id/aphoneNumber"/>
	</LinearLayout>
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textSize="20dp"
		android:orientation="vertical">

		<Button
		    android:id="@+id/aokBtn"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center_horizontal"
		    android:textSize="15dp"
		    android:text="@string/registerresult_activity_ok" />

	</LinearLayout>


</LinearLayout>
